cherry pick v3->v4 toss init script update for multiple genders
no c code changes in this commit

--- a/util/relocation/relocate-paths.sh.in
+++ b/util/relocation/relocate-paths.sh.in
@@ -59,7 +59,7 @@ do
 			gzip -f $file
 		fi
 	else
-		: echo "File \"$file\" not found, skipping" ;# expected case
+		: echo "File \"$file\" not found, skipping" ; #this is a normal case for split rpms
 		continue
 	fi
 done
