Remove gpcdr-support submodule

--- a/Makefile.am
+++ b/Makefile.am
@@ -20,10 +20,6 @@ SUBDIRS = lib
 
 # we build of the maybe vars to control build order, which
 # AM_CONDITIONAL does not preserve.
-MAYBE_GPCDLOCAL = @MAYBE_GPCDLOCAL@
-if ENABLE_GPCDLOCAL
-GPCDSUBDIR = gpcd-support
-endif
 # ocm needs lib
 MAYBE_OCM = @MAYBE_OCM@
 # ldms needs lib; optional sos, ocm
@@ -33,7 +29,7 @@ MAYBE_ME = @MAYBE_ME@
 # komondor needs lib; optional ocm
 MAYBE_KOMONDOR = @MAYBE_KOMONDOR@
 
-SUBDIRS += $(GPCDSUBDIR) \
+SUBDIRS += \
 $(MAYBE_LDMS) \
 util
 
@@ -41,7 +37,7 @@ util
 # For now, we ship as we expect to configure.
 # Perhaps all should be included all the time but we surround their
 # make content for dist with enable conditionals.
-DIST_SUBDIRS = $(GPCDSUBDIR) lib ldms util
+DIST_SUBDIRS = lib ldms util
 # make dist _will_ fail for these unless we mod their .am files
 # so not included in dist.
 NODIST_SUBDIRS = ocm me komondor
