Add the build flags for the test_sampler and grptest plugins
Without the change the test_sampler and grptest plugins build only when
--enable-ldms-test is given. The flag enables build of all LDMS test programs.
With this change, --enable-test_sampler and --enable-grptest can be given to
build the test_sampler and grptest plugins, respectively, without building all
LDMS test programs.. The plugins also build with --enable-ldms-test flag.

--- a/ldms/configure.ac
+++ b/ldms/configure.ac
@@ -54,6 +54,7 @@ OPTION_DEFAULT_DISABLE([slurmtest], [ENABLE_SLURMTEST])
 OPTION_DEFAULT_DISABLE([developer], [ENABLE_DEVELOPER])
 OPTION_DOC
 OPTION_DEFAULT_DISABLE([etc], [ENABLE_ETC])
+OPTION_DEFAULT_DISABLE([ldms-test], [ENABLE_LDMS_TEST])
 
 OPTION_DEFAULT_ENABLE([core], [ENABLE_CORE])
 OPTION_DEFAULT_ENABLE([mmap], [ENABLE_MMAP])
@@ -134,6 +135,13 @@ OPTION_DEFAULT_DISABLE([kokkos], [ENABLE_KOKKOS])
 OPTION_DEFAULT_ENABLE([jobinfo-sampler], [ENABLE_JOBINFO])
 OPTION_DEFAULT_DISABLE([jobinfo-slurm], [ENABLE_SLURM_JOBINFO])
 OPTION_DEFAULT_DISABLE([appinfo], [ENABLE_APPINFO])
+OPTION_DEFAULT_DISABLE([test_sampler], [ENABLE_TEST_SAMPLER])
+dnl test_sampler will also build with --enable-ldms-test
+AM_CONDITIONAL([ENABLE_TEST_SAMPLER_LDMS_TEST], [test "x$ENABLE_LDMS_TEST_FALSE" = "x#" -o "x$ENABLE_TEST_SAMPLER_FALSE" = "x#"])
+OPTION_DEFAULT_DISABLE([grptest], [ENABLE_GRPTEST])
+dnl grptest will also build with --enable-ldms-test
+AM_CONDITIONAL([ENABLE_GRPTEST_LDMS_TEST], [test "x$ENABLE_LDMS_TEST_FALSE" = "x#" -o "x$ENABLE_GRPTEST_FALSE" = "x#"])
+
 
 OPTION_DEFAULT_ENABLE([ldmsd], [ENABLE_LDMSD])
 
@@ -181,7 +189,6 @@ LDMSD_PLUGIN_LIBPATH=${pkglibdir}
 AC_SUBST(LDMSD_PLUGIN_LIBPATH)
 
 OPTION_DEFAULT_ENABLE([ldms-python], [ENABLE_LDMS_PYTHON])
-OPTION_DEFAULT_DISABLE([ldms-test], [ENABLE_LDMS_TEST])
 
 dnl Check for pthread support
 AC_CHECK_LIB(pthread, pthread_mutex_init, [],
