--- a/ldms/src/sampler/Makefile.am
+++ b/ldms/src/sampler/Makefile.am
@@ -265,11 +265,13 @@ libgeneric_sampler_la_LIBADD = $(COMMON_LIBADD) -lcoll
 pkglib_LTLIBRARIES += libgeneric_sampler.la
 endif
 
-if ENABLE_LDMS_TEST
+if ENABLE_TEST_SAMPLER_LDMS_TEST
 libtest_sampler_la_SOURCES = test_sampler.c
 libtest_sampler_la_LIBADD = $(COMMON_LIBADD)
 pkglib_LTLIBRARIES += libtest_sampler.la
+endif
 
+if ENABLE_GRPTEST_LDMS_TEST
 libgrptest_la_SOURCES = grptest.c $(BASE_SRC)
 libgrptest_la_LIBADD = $(COMMON_LIBADD)
 pkglib_LTLIBRARIES += libgrptest.la
